--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/MaestroCore"]
 	path = external/MaestroCore
-	url = git@github.com:MaestroSoft-AB/MaestroCore.git
+	url = https://github.com/MaestroSoft-AB/MaestroCore.git
