Use config for HTTP port

--- a/server/config/system.conf
+++ b/server/config/system.conf
@@ -4,23 +4,15 @@
 # =====TCP Server Settings=====
 
 tcp.host=0.0.0.0
-tcp.port=8080
-# Maximum number of pending connections waiting to be accepted
-# how it is used: listen(socket_fd, backlog)
-tcp.backlog=128
+tcp.port=10580 # REAL (matches current HTTP listener port)
+tcp.backlog=10000 # REAL (matches BACKLOG in server/include/tcp/tcp_server.h)
 
 # =====HTTP Server Settings=====
 
 http.enabled=true
-http.port=8081
-# Root directory for serving static HTTP content
-# example of use: open(root + "/index.html" -> requested path)
+http.port=10580 # REAL (previously hard-coded in server/src/http/http_server.c)
 http.root=/var/www/html
-http.keepalive=true
-# Example of use:
-# if (keepalive) {
-#     reuse_connection();
-# }
+http.keepalive=false # REAL (responses currently use "Connection: close")
 
 # =====Worker / Thread Pool=====
 
@@ -30,13 +22,6 @@ worker.enabled=true
 worker.threads=4
 # Maximum number of tasks in the worker queue
 worker.queue_size=256
-# Example of use:
-# int threads = atoi(threads_str);
-# pthread_create(...);
-# Feature flags Enable / Disable 
-# configurations switches can run at runtime
-# changing behaviour without recompiling
-
 # disable / enable caching feature
 feature.cache=true
 # disable / enable metrics collection
@@ -51,26 +36,13 @@ upstream.servers=10.0.0.1,10.0.0.2,10.0.0.3
 # =====Connection Limits=====
 
 limits.max_connections=1000
-# Example of use:
-# if (active_connections >= max_connections) {
-#     reject_new_connection();
-# }
 limits.max_payload_size=1048576
-# Example of use:
-# if (payload_size > max_payload_size) {
-#     close_connection();
-# }
 
 # =====Logging=====
 
 log.level=info
-# Example of use:
-# if (level >= INFO) log(...);
 
 log.path=logs/optimaestro.log
-# Example of use:
-# log_fd = open(path, O_APPEND);
-
 # ===== Scheduler =====
 
 # Enables/disables the scheduler loop (background job runner).
